name:                RSAhs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Tatsuki-I/RSAhs#readme
license:             BSD3
license-file:        LICENSE
author:              Tatsuki-I
maintainer:          tatsuki.devel@gmail.com
copyright:           2017 Tatsuki-I
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RSA
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable RSAhs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , RSAhs
  default-language:    Haskell2010

test-suite RSAhs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , RSAhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Tatsuki-I/RSAhs
